Solution: Two possibilities:

1) Logical Olap Op can return the schema even though it is not executed, yet.

2) We really search for the first base-cube (on the left sides of the query plan).

Note later when "filtering" more logical query plans, we may need the logical ops to return the schema.

For now, we go just through them ourselves.

==2014-07-12==
Problem: Queries would not work, anymore. 
Solution: No dice, no dice.

Problem: Base-Cube would not forward the implicit measures. I should do that, though.
Solution: Base-Cube now forwards measures, but returned tuples are without (why, again?)

Problem: One drill-across query over example dataset:
Solution: We have to add the respective datasets with the links contained.
Status: Drill-Across: Errors 0, Failures 1

==2014-07-10==
Problem: Starting from the query over the global dataset, we currently do not properly "unfold" the query given the "available datasets". 
Solution: We should: Only drill-across over datasets that 1) show one of the queried measures, 2) does have all the "inquired dimensions" 3) dices only available dimensions.
Hint: This is quite important. The datasets in the FROM clause do NOT indicate a drill-across over the datasets, since the drill-across will most likely be empty. Instead, we are querying a global cube that can be build from those single cubes.

* Refactored building of Logical Query Plan.
* Now using "definition" of global cube, i.e., drill-across of all fitting datasets.

Problem: We should not concat header if all measures are the same. We should update metadata accordingly.
Solution: done

Problem: Again, what does the convert-cube operation do? I think, it removes the implicit measures.
Solution: As soon as we use convert-cube, we only work with the non-implicit measures. 

* Outer-join in case all measures are the same (is that really the case?)
* We should be querying over all datasets (scenario).
* Do I have a case where I only need information from a subset of datasets?